--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "chart.js": "^3.8.0",
     "ngx-infinite-scroll": "^13.0.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
